--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#">Acerca de</a>
             <a href="#">Portafolio</a>
             <a href="#">Servicios</a>
-            <a href="#">Contactos</a>
+            <a href="#">Contacto</a>
         </nav>
         <section class ="textos-header">
             <h1>Un lugar soñado</h1>
