cambios en fomulario y principal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#">Acerca de</a>
             <a href="#">Portafolio</a>
             <a href="#">Servicios</a>
-            <a href="#">Contacto</a>
+            <a href="formulario.html">Contacto</a>
         </nav>
         <section class ="textos-header">
             <h1>Un lugar soñado</h1>
@@ -57,7 +57,7 @@
             </div>
         
             <div class="imagen-port">
-                 <img src="img.2/montañas (9).jpg" alt="">
+                 <img src="img.2/montanas (9).jpg" alt="">
                  <div class="hover-galeria">
                         <img src="img.2/icono5 (1).ico" alt="">
                         <p>Nuestro Trabajo</p>
