--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         
             <div class="imagen-port">
-                 <img src="img.2/montañas (9).jpg" alt="">
+                 <img src="img.2/montanas (9).jpg" alt="">
                  <div class="hover-galeria">
                         <img src="img.2/icono5 (1).ico" alt="">
                         <p>Nuestro Trabajo</p>
