--- a/formulario.html
+++ b/formulario.html
@@ -35,7 +35,12 @@
             <script src="js/script.js"></script>
             <script type="text/javascript" src="js/jspdf.min.js"></script>
         </div>
+        <div>
+            <center><a href="index.html">Home</a></center>
+            </div>
     </form>
+
     
 </body>
+
 </html>
