--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
         <div class="section">
             <div>
                 <h4>Compañia</h4>
-                <a href="#">inicio</a>
-                <a href="#">Contactos</a>
-                <a href="#">Acerca de</a>
+                <a href="#home">inicio</a>
+                <a href="formulario.html">Contactos</a>
+                <a href="#acercade">Acerca de</a>
                 <a href="#">Preferencias</a>
             </div>
 
