--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="#">Inicio</a>
             <a href="#acercade">Acerca de</a>
             <a href="#portafolio">Portafolio</a>
+            <a href="#clientes">Nuestros clientes</a>
             <a href="#servicios">Servicios</a>
             <a href="formulario.html">Contacto</a>
         </nav>
@@ -125,9 +126,10 @@
                             <p>Nuestro Trabajo</p>
                         </div>
                     </div>
+                    <center><a href="#arriba">Arriba</a></center>
         </section>
 
-
+        <a name="clientes"></a>
         <section class="clientes contenedor">
             <h2 class="Titulo">Nuestros Clientes</h2>
             <div class="cards">
