--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
                             <p>Nuestro Trabajo</p>
                         </div>
                     </div>
-                    <center><a href="#arriba">Arriba</a></center>
+                </div>
+                <pre>
+                <center><a href="#arriba">Arriba</a></center></pre>
         </section>
 
         <a name="clientes"></a>
