--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
                     </div>
                 </div>
-                <center><a href="#arriba">Arriba</a></center>
+            </div>
+            <center><a href="#arriba">Arriba</a></center>
         </section>
     </main>
 
@@ -189,11 +190,11 @@
             </div>
 
             <div class="redes">
-                <samp class="fb"><i class="fa-brands fa-facebook"></i></samp>
-                <samp class="in"><i class="fa-brands fa-instagram"></i></samp>
-                <samp class="tw"><i class="fa-brands fa-twitter"></i></samp>
-                <samp class="wt"><i class="fa-brands fa-square-whatsapp"></i></samp>
-                <samp class="li"><i class="fa-brands fa-linkedin"></i></samp>
+                <samp class="fb"><a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a></samp>
+                <samp class="in"><a href="https://instagram.com"></a><i class="fa-brands fa-instagram"></i></a></samp>
+                <samp class="tw"><a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a></samp>
+                <samp class="wt"><a href="https://whatsapp.com.com"><i class="fa-brands fa-square-whatsapp"></i></a></samp>
+                <samp class="li"><a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a></samp>
             </div>
         </div>
         <hr>
