--- a/formulario.html
+++ b/formulario.html
@@ -16,20 +16,16 @@
         <div class="form">
             <h4>Formulario de Contacto</h4>
             <div class="grupo">
-                <input type="text" name="" id="campo_nombre" required><span class="barra"></span>
-                <label>Nombre</label>
+                <input type="text" name="" id="campo_nombre" placeholder="Nombre y Apellido" required><span class="barra"></span>
             </div>
             <div class="grupo">
-                <input type="email" name="" id="campo_email" required><span class="barra"></span>
-                <label>Email</label>
+                <input type="email" name="" id="campo_email" placeholder="Email" required><span class="barra"></span>
             </div>
             <div class="grupo">
-                <input type="number" name="" id="campo_edad" required><span class="barra"></span>
-                <label>Edad</label>
+                <input type="number" name="" id="campo_edad" placeholder="Edad" required><span class="barra"></span>
             </div>
             <div class="grupo">
-                <textarea name="" id="campo_mensaje" rows="3" required></textarea><span class="barra"></span>
-                <label>Mensaje</label>
+                <textarea name="" id="campo_mensaje" rows="3" placeholder="Mensaje" required></textarea><span class="barra"></span>
             </div>
             <button id="boton_enviar" type="submit">Enviar</button>
 
