--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stockpath.bootstrapcd.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/80eba11921.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="img.5/logo-S.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img5/logo-S.ico" type="image/x-icon">
     <title>PAGINA WEB</title>
 </head>
     <body>
