--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="main">
                 <div class="navbar">
                     <div class="icon">
-                        <img  class="logo-uno"src="img5/logo3.ico" alt="#">
+                        <img class="logo-uno" src="img5/logo3.ico" alt="">
                     </div>
                     <div class="menu">
                         <ul>
@@ -43,7 +43,7 @@
             <section class="conteiner-all">
                 <h2 class="titulo">Cabañas "UN LUGAR SOÑADO"</h2>
                     <h3 class="titulo">Nuestras Instalaciones</h3>
-                        <img src="" alt="">
+                        <img src="img5/CASA2 (1).jpg" alt="">
                         <p>Estamos ubicados al sur de Argentina más presisamente en Río Negro.
                             Contamos con un amplio complejo de cabañas.
                         </p>
@@ -56,21 +56,21 @@
                     <h2 class="titulo">Portafolio</h2>
                     <div class="galeria-port">
                         <div class="imagen-port">
-                            <img src="" alt="">
+                            <img src="img5/FAMILIA5 (1).jpg" alt="">
                             <div class="hover-galeria">
                                 <img src="img5/icono5.ico" alt="">
                                 <p>Nuestro Trabajo</p>
                             </div>
                         </div>
                         <div class="imagen-port">
-                            <img src="img5/OIP _1_.jpg" alt="">
+                            <img src="img5/familia6.jpg" alt="">
                             <div class="hover-galeria">
                                 <img src="img5/icono5.ico" alt="">
                                 <p>Nuestro Trabajo</p>
                             </div>
                         </div>
                         <div class="imagen-port">
-                            <img src="img5/FAMILIA4.jpg" alt="">
+                            <img src="img5/vacaciones.jpg" alt="">
                             <div class="hover-galeria">
                                 <img src="img5/icono5.ico" alt="">
                                 <p>Nuestro Trabajo</p>
@@ -84,28 +84,28 @@
                             </div>
                         </div>
                         <div class="imagen-port">
-                            <img src="img5/OIP _2_.jpg" alt="">
+                            <img src="img5/FAMILIA3.jpg" alt="">
                             <div class="hover-galeria">
                                 <img src="img5/icono5.ico" alt="">
                                 <p>Nuestro Trabajo</p>
                             </div>
                         </div>
                         <div class="imagen-port">
-                            <img src="img5/chica1 (2).jpg" alt="">
+                            <img src="img5/paisajes (5).jpg" alt="">
                             <div class="hover-galeria">
                                 <img src="img5/icono5.ico" alt="">
                                 <p>Nuestro Trabajo</p>
                             </div>
                         </div>
                         <div class="imagen-port">
-                            <img src="img5/paisajes1 (1).jpg" alt="">
+                            <img src="img5/FAMILIA4.jpg" alt="">
                             <div class="hover-galeria">
                                 <img src="img5/icono5.ico" alt="">
                                 <p>Nuestro Trabajo</p>
                             </div>
                         </div>
                         <div class="imagen-port">
-                            <img src="img5/vacaciones (1).jpg" alt="">
+                            <img src="img5/vacaciones2.jpg" alt="">
                             <div class="hover-galeria">
                                 <img src="img5/icono5.ico" alt="">
                                 <p>Nuestro Trabajo</p>
