--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="main">
                 <div class="navbar">
                     <div class="icon">
-                        <img  class="logo-uno"src="img5/logo3.ico" alt="#">
+                        <img  class="logo-uno" src="./img5/un lugar soñado.png" alt="#">
                     </div>
                     <div class="menu">
                         <ul>
@@ -38,7 +38,6 @@
                 <div class="content">
                     <h1>Un Lugar Soñado <br> <span>Tus mejores vacaciones</span> <br>Paisajes Increíbles </h1>
                     <p class="par">Elegí disfrutar tus vacaciones en familia en nuestro Complejo de Cabañas <br> será la experiencia más alucinante de tu vida <br> Vení conoce UN LUGAR SOÑADO</p>
-                    <button class="cn"> <a href="#">Conocé Más</a></button>
                     <div class="form">
                         <h2>Ingresa</h2>
                         <input type="email" name="" placeholder="Ingresar Email">
