--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stockpath.bootstrapcd.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style_form.css">
+    <link rel="stylesheet" href="css/stylevalidar.css">
     <script src="https://kit.fontawesome.com/80eba11921.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./img5/un lugar soñado.png" type="image/x-icon">
     
@@ -105,7 +106,10 @@
             </div>
         </section><!--Aquí termina formulario modal-->
         <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script><!--OJO NO MOVER, DE LO CONTRARIO NO ABRE FORM-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
         <script src="./js/script.js"></script>
+        <script src="./js/validarformulario.js"></script>
         <script src="./js/ajax.js"></script>
         <script type="text/javascript" src="js/jspdf.min.js"></script>
 
