--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
             </section>
             </section>
             <section>
-           <!-- Botón para abrir el modal <button id="abrir-modal">Contacto</button> --> 
             <center><a href="#arriba">Arriba</a></center>
             
              <!-- Modal -->
@@ -124,28 +123,28 @@
                 <h2 class="titulo">Galería</h2>
                 <div class="galeria-port">
                     <div class="imagen-port">
-                        <img src="img5/FAMILIA5.jpg" alt="">
+                        <img src="img5/lago1.jpg" alt="">
                     </div>
                     <div class="imagen-port">
-                        <img src="img5/FAMILIA3.jpg" alt="">
+                        <img src="img5/costanera-lacar.jpg" alt="">
                     </div>
                     <div class="imagen-port">
                         <img src="img5/FAMILIA4.jpg" alt="">
                     </div>
                     <div class="imagen-port">
-                        <img src="img5/ilustracion2 (4).jpg" alt="">
+                        <img src="img5/chica1.jpg" alt="">
                     </div>
                     <div class="imagen-port">
-                        <img src="img5/chica1.jpg" alt="">
+                        <img src="img5/ilustracion2 (4).jpg" alt="">
                     </div>
                     <div class="imagen-port">
                         <img src="img5/chica2.jpg" alt="">
                     </div>
                     <div class="imagen-port">
-                        <img src="img5/lago1.jpg" alt="">
+                        <img src="img5/lago3.jpg" alt="">
                     </div>
                     <div class="imagen-port">
-                        <img src="img5/lago2.jpg" alt="">
+                        <img src="img5/pileta.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -167,7 +166,7 @@
                         <img src="img5/face1.jpg" alt="">
                         <div class="contenido-texto-card">
                             <h4>Susana</h4>
-                            <p>Tuve el lujo de vacacionar en Las Cabañas "UN LUGAR SOÑADO " en el año 2016 y desde entonces es nuestro lugar favorito para cuando necesitamos descansar y salir de la rutina. Sus paisajes te llenan de paz. Es muy recomendables Vení a disfrutar de este lugar tan hermoso. </p>
+                            <p>Tuve el lujo de vacacionar en Las Cabañas "UN LUGAR SOÑADO " en el año 2016 y desde entonces es nuestro lugar favorito para cuando necesitamos descansar y salir de la rutina. Sus paisajes te llenan de paz. Es muy recomendable. Vení a disfrutar de este lugar tan hermoso. </p>
                             
                         </div>
                     </div>
@@ -256,9 +255,9 @@
                     <a href="#">Contactar</a>
                 </div>
                 <div>
-                    <h5>Suscribite a nuestras novedades</h5>
+                    <h5>SUSCRIBITE A NUESTRAS NOVEDADES</h5>
                         <input type="text" placeholder="Ingresa tu Email">
-                        <button type="submit">Suscribete</button>
+                        <button class="btnContacto" type="submit">Suscribite</button>
                 </div>
                 </div>
                 <div class="derechos">
